fix spacing/ #8694

--- a/openscholar/themes/custom/garyking/css/garyking.css
+++ b/openscholar/themes/custom/garyking/css/garyking.css
@@ -804,7 +804,7 @@ ul.nice-menu-down,
         font-size: 28px;
     }
     #menu-bar ul.nice-menu a {
-        font-size: 16.3px;
+        font-size: 16px;
     }
     #menu-bar #block-os-primary-menu a.active,
     #menu-bar #block-os-primary-menu a:hover,
